services/eks/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nodegroup
                    operator: In
                    values:
                      - keycloak
      containers:
        - name: keycloak-app
          image: 549209747641.dkr.ecr.us-east-1.amazonaws.com/keycloak:latest  # コンテナイメージURL 
          imagePullPolicy: Always
          command:
            - /opt/keycloak/bin/kc.sh
            - start
            - --optimized

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "0.5"
              memory: "1.5Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
