services/eks/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/health/ready"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: keycloak-app
